# modelsym

./: .gitignore  .gitmodules  DISCLAIMER  LICENSE  README.md  align.slurm  align_launch.sh  plotting.ipynb  projections.slurm  stitch_Grelu.slurm  stitch_Grelu_crossval.slurm  stitch_lasso.slurm  stitch_launch.sh  stitch_rr.slurm  stitch_standard.slurm  zoo.slurm  zoo_launch.sh
model_symmetries/: constants.py  datasets.py  models.py  plotting.py  setup.cfg  train.py  zoo.py
model_symmetries/alignment/: cifar10_alignment.py
model_symmetries/stitching/: cifar10_projections.py  cifar10_stitching.py  cifar10_stitching_crossval.py  projections.py  rotate_activations.py  stitch_compact_classifier.py  stitch_compact_transformer.py  stitching.py
