[metadata]
name = model_symmetries
version = 0.0.1
author = Charles Godfrey and Davis Brown
author_email = charles.godfrey@pnnl.gov
description = model symmetries 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: OS Independent

[options]
packages = find:
# python_requires = >=3.6

[options.packages.find]
where = src